[package]
name = "lock-generations"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Johan Wiskerke"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
users = "0.11"

[dev-dependencies]
tempfile = "3.8"
